// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds \`dataTest\` prop 1`] = `
<ForwardRef
  dataTest="Duck"
  iconLeft={null}
  iconRight={null}
  isDisabled={false}
  shouldOpenInNewTab={false}
  theme="primary"
  to="https://example.com/"
>
  <ForwardRef
    dataTest="Duck"
    iconLeft={null}
    iconRight={null}
    isDisabled={false}
    shouldOpenInNewTab={false}
    theme="primary"
    to="https://example.com/"
  >
    <a
      className="plain plainThemePrimary"
      data-test="Duck"
      disabled={false}
      href="https://example.com/"
      target="_self"
    >
      Goose
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`adds \`dataTest\` prop 2`] = `
<ForwardRef
  dataTest="Duck"
  icon={null}
  isDisabled={false}
  shouldOpenInNewTab={false}
  size="large"
  theme="primary"
  to="#"
  width="auto"
>
  <ForwardRef
    dataTest="Duck"
    icon={null}
    isDisabled={false}
    shouldOpenInNewTab={false}
    size="large"
    theme="primary"
    to="#"
    width="auto"
  >
    <a
      className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
      data-test="Duck"
      disabled={false}
      href="#"
      target="_self"
    >
      <span
        className="flexWrapper flexWrapperSizeLarge"
      >
        Goose
      </span>
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`adds \`rel\` attribute to handle security vulnerability 1`] = `
<ForwardRef
  iconLeft={null}
  iconRight={null}
  isDisabled={false}
  shouldOpenInNewTab={true}
  theme="primary"
  to="https://example.com/"
>
  <ForwardRef
    iconLeft={null}
    iconRight={null}
    isDisabled={false}
    shouldOpenInNewTab={true}
    theme="primary"
    to="https://example.com/"
  >
    <a
      className="plain plainThemePrimary"
      disabled={false}
      href="https://example.com/"
      rel="noopener noreferrer"
      target="_blank"
    >
      Goose
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`adds \`rel\` attribute to handle security vulnerability 2`] = `
<ForwardRef
  icon={null}
  isDisabled={false}
  shouldOpenInNewTab={true}
  size="large"
  theme="primary"
  to="https://example.com/"
  width="auto"
>
  <ForwardRef
    icon={null}
    isDisabled={false}
    shouldOpenInNewTab={true}
    size="large"
    theme="primary"
    to="https://example.com/"
    width="auto"
  >
    <a
      className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
      disabled={false}
      href="https://example.com/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        className="flexWrapper flexWrapperSizeLarge"
      >
        Goose
      </span>
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`adds attribute to open link in new tab 1`] = `
<ForwardRef
  iconLeft={null}
  iconRight={null}
  isDisabled={false}
  shouldOpenInNewTab={true}
  theme="primary"
  to="https://example.com/"
>
  <ForwardRef
    iconLeft={null}
    iconRight={null}
    isDisabled={false}
    shouldOpenInNewTab={true}
    theme="primary"
    to="https://example.com/"
  >
    <a
      className="plain plainThemePrimary"
      disabled={false}
      href="https://example.com/"
      rel="noopener noreferrer"
      target="_blank"
    >
      Goose
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`adds attribute to open link in new tab 2`] = `
<ForwardRef
  icon={null}
  isDisabled={false}
  shouldOpenInNewTab={true}
  size="large"
  theme="primary"
  to="https://example.com/"
  width="auto"
>
  <ForwardRef
    icon={null}
    isDisabled={false}
    shouldOpenInNewTab={true}
    size="large"
    theme="primary"
    to="https://example.com/"
    width="auto"
  >
    <a
      className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
      disabled={false}
      href="https://example.com/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        className="flexWrapper flexWrapperSizeLarge"
      >
        Goose
      </span>
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`removes \`href\` if link is disabled 1`] = `
<ForwardRef
  iconLeft={null}
  iconRight={null}
  isDisabled={true}
  shouldOpenInNewTab={false}
  theme="primary"
  to="https://example.com/"
>
  <ForwardRef
    iconLeft={null}
    iconRight={null}
    isDisabled={true}
    shouldOpenInNewTab={false}
    theme="primary"
    to="https://example.com/"
  >
    <a
      className="plain plainThemePrimary"
      disabled={true}
      target="_self"
    >
      Goose
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`removes \`href\` if link is disabled 2`] = `
<ForwardRef
  icon={null}
  isDisabled={true}
  shouldOpenInNewTab={false}
  size="large"
  theme="primary"
  to="https://example.com/"
  width="auto"
>
  <ForwardRef
    icon={null}
    isDisabled={true}
    shouldOpenInNewTab={false}
    size="large"
    theme="primary"
    to="https://example.com/"
    width="auto"
  >
    <a
      className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
      disabled={true}
      target="_self"
    >
      <span
        className="flexWrapper flexWrapperSizeLarge"
      >
        Goose
      </span>
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`renders \`children\` passed in 1`] = `
<ForwardRef
  iconLeft={null}
  iconRight={null}
  isDisabled={false}
  shouldOpenInNewTab={false}
  theme="primary"
  to="https://example.com/"
>
  <ForwardRef
    iconLeft={null}
    iconRight={null}
    isDisabled={false}
    shouldOpenInNewTab={false}
    theme="primary"
    to="https://example.com/"
  >
    <a
      className="plain plainThemePrimary"
      disabled={false}
      href="https://example.com/"
      target="_self"
    >
      Goose
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`renders \`children\` passed in 2`] = `
<ForwardRef
  icon={null}
  isDisabled={false}
  shouldOpenInNewTab={false}
  size="large"
  theme="primary"
  to="https://example.com/"
  width="auto"
>
  <ForwardRef
    icon={null}
    isDisabled={false}
    shouldOpenInNewTab={false}
    size="large"
    theme="primary"
    to="https://example.com/"
    width="auto"
  >
    <a
      className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
      disabled={false}
      href="https://example.com/"
      target="_self"
    >
      <span
        className="flexWrapper flexWrapperSizeLarge"
      >
        Goose
      </span>
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`renders \`to\` prop as \`href\` 1`] = `
<ForwardRef
  iconLeft={null}
  iconRight={null}
  isDisabled={false}
  shouldOpenInNewTab={false}
  theme="primary"
  to="https://example.com/"
>
  <ForwardRef
    iconLeft={null}
    iconRight={null}
    isDisabled={false}
    shouldOpenInNewTab={false}
    theme="primary"
    to="https://example.com/"
  >
    <a
      className="plain plainThemePrimary"
      disabled={false}
      href="https://example.com/"
      target="_self"
    >
      Goose
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`renders \`to\` prop as \`href\` 2`] = `
<ForwardRef
  icon={null}
  isDisabled={false}
  shouldOpenInNewTab={false}
  size="large"
  theme="primary"
  to="https://example.com/"
  width="auto"
>
  <ForwardRef
    icon={null}
    isDisabled={false}
    shouldOpenInNewTab={false}
    size="large"
    theme="primary"
    to="https://example.com/"
    width="auto"
  >
    <a
      className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
      disabled={false}
      href="https://example.com/"
      target="_self"
    >
      <span
        className="flexWrapper flexWrapperSizeLarge"
      >
        Goose
      </span>
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`renders a anchor tag when a \`to\` is provided 1`] = `
<ForwardRef
  iconLeft={null}
  iconRight={null}
  isDisabled={false}
  shouldOpenInNewTab={false}
  theme="primary"
  to="https://example.com/"
>
  <ForwardRef
    iconLeft={null}
    iconRight={null}
    isDisabled={false}
    shouldOpenInNewTab={false}
    theme="primary"
    to="https://example.com/"
  >
    <a
      className="plain plainThemePrimary"
      disabled={false}
      href="https://example.com/"
      target="_self"
    >
      Goose
    </a>
  </ForwardRef>
</ForwardRef>
`;

exports[`renders a anchor tag when a \`to\` is provided 2`] = `
<ForwardRef
  icon={null}
  isDisabled={false}
  shouldOpenInNewTab={false}
  size="large"
  theme="primary"
  to="https://example.com/"
  width="auto"
>
  <ForwardRef
    icon={null}
    isDisabled={false}
    shouldOpenInNewTab={false}
    size="large"
    theme="primary"
    to="https://example.com/"
    width="auto"
  >
    <a
      className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
      disabled={false}
      href="https://example.com/"
      target="_self"
    >
      <span
        className="flexWrapper flexWrapperSizeLarge"
      >
        Goose
      </span>
    </a>
  </ForwardRef>
</ForwardRef>
`;
